# Sample-manager

./: .gitignore  README.md  command.py  create.py  list.py  make.py  manager.py  options.json  options.py  sample.bat
samples/pygame/: main.py  settings.py
samples/sfml/: .gitignore
samples/sfml/builder/: CMakeLists.txt
samples/sfml/headers/: main.hpp
samples/sfml/sources/: main.cpp
